--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>Introduction</section>
+				<section>Definition</section>
+				<section>Examples w/Mitigation</section>
+				<subsection>Global Variables</subsection>
+				<subsection>Event Listeners</subsection>
+				<subsection>Closures</subsection>
+				<subsection>Detached DOM Nodes</subsection>
+				<subsection>Timers and Intervals</subsection>
+				<section>Tooling</section>
+				<subsection>Chrome DevTools</subsection>
+				<subsection>MemLab</subsection>
+				<subsection>Fuite</subsection>
+				<subsection>WeakMap & WeakSet</subsection>
+				<section>Closing</section>
 			</div>
 		</div>
 
