--- a/index.html
+++ b/index.html
@@ -20,6 +20,50 @@
 				<section>Definition</section>
 				<section>Examples w/Mitigation</section>
 				<subsection>Global Variables</subsection>
+				<pre>
+					<code class="language-javascript">
+						// Global Variable
+						var globalVar = 'I am a global variable';
+
+						// Mitigation
+						(function() {
+							var localVar = 'I am a local variable';
+						})();
+					</code>
+				</pre>
+				<pre>
+					<code class="language-javascript">
+						function createLeak() {
+							leak = "This is a leak!"; // Declares a global variable unintentionally
+						}
+
+						createLeak();
+						console.log(window.leak); // Accessible globally
+
+						// Mitigation
+						function createLeak() {
+							let leak = "No leak here!"; // Use `let`, `const`, or `var`
+						}
+					</code>
+				</pre>
+				<pre>
+					<code class="language-javascript">
+						// This global variable will persist for the life of the program
+						// and cause a memory leak if it holds onto references to objects
+						// that are no longer needed.
+						let data = [];
+
+						function fetchData() {
+							data = getDataFromServer();
+						}
+
+						// To prevent the memory leak, we need to set the global variable
+						// to null when it is no longer needed.
+						function clearData() {
+							data = null;
+						}
+						</code>
+				</pre>
 				<subsection>Event Listeners</subsection>
 				<subsection>Closures</subsection>
 				<subsection>Detached DOM Nodes</subsection>
