--- a/_code/detached-dom/index.html
+++ b/_code/detached-dom/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create DIV's</title>
+  <title>Detached DOM</title>
 </head>
 
 <body>
-  <h1>Create DIV's</h1>
-  <button id="grow">Create Div</button>
+  <h1>Detached DOM</h1>
   <script src="script.js" defer></script>
 </body>
 
