--- a/index.html
+++ b/index.html
@@ -117,8 +117,45 @@
 							globalVar = "I'm a global variable"; // Implicitly global
 					}
 					createGlobalVar();
+
+					// fix: use const, let, or even var inside a function
 						</code>
 				</pre>
+			</section>
+			<section>Detached DOM Nodes</section>
+			<section>
+				<pre>
+						<code class="language-javascript">
+							let detachedNode;
+							function createDetachedNode() {
+								const div = document.createElement("div");
+								document.body.appendChild(div);
+								document.body.removeChild(div); // Removed from DOM
+								detachedNode = div; // Still in memory
+								console.log("detachedNode before setting to null: ", detachedNode);
+							}
+							createDetachedNode();
+						</code>
+					</pre>
+			</section>
+			<section>
+				<pre>
+						<code class="language-javascript">
+							let detachedNode;
+							function createDetachedNode() {
+								const div = document.createElement("div");
+								document.body.appendChild(div);
+								document.body.removeChild(div); // Removed from DOM
+								detachedNode = div; // Still in memory
+								console.log("detachedNode before setting to null: ", detachedNode);
+							}
+							createDetachedNode();
+
+							// fix
+							detachedNode = null; // Remove reference manually when no longer needed
+							console.log("detachedNode after setting to null: ", detachedNode);
+						</code>
+					</pre>
 			</section>
 			<section>Event Listeners</section>
 			<section>
@@ -219,41 +256,6 @@ doWork(function callback() {
   closureVar = null;
 });
 						</code></pre>
-			</section>
-			<section>Detached DOM Nodes</section>
-			<section>
-				<pre>
-						<code class="language-javascript">
-							let detachedNode;
-							function createDetachedNode() {
-								const div = document.createElement("div");
-								document.body.appendChild(div);
-								document.body.removeChild(div); // Removed from DOM
-								detachedNode = div; // Still in memory
-								console.log("detachedNode before setting to null: ", detachedNode);
-							}
-							createDetachedNode();
-						</code>
-					</pre>
-			</section>
-			<section>
-				<pre>
-						<code class="language-javascript">
-							let detachedNode;
-							function createDetachedNode() {
-								const div = document.createElement("div");
-								document.body.appendChild(div);
-								document.body.removeChild(div); // Removed from DOM
-								detachedNode = div; // Still in memory
-								console.log("detachedNode before setting to null: ", detachedNode);
-							}
-							createDetachedNode();
-
-							// fix
-							detachedNode = null; // Remove reference manually when no longer needed
-							console.log("detachedNode after setting to null: ", detachedNode);
-						</code>
-					</pre>
 			</section>
 			<section>Timers and Intervals</section>
 			<section>
